<resources>
    <string name="app_name">Marvelzinha</string>
    <string name="btn_all">Historico</string>
    <string name="btn_search">Procurar</string>
    <string name="btn_view">Salvar</string>
    <string name="plain_word">Digite o nome do heroi:</string>
    <string name="limpar">Limpar</string>
    <string name="title_activity_maps">Map</string>
    <string name="endereco">Endereço</string>
</resources>